# nvidia-rtsp-startup-artifacts

./: CMakeLists.txt  README.md
service/: rtsp-server.service
src/: ArgusCameraGStreamerElements.h  CameraConfig.h  NvArgusCamera.cpp  NvArgusCamera.h  rtsp_server.cpp
